--- a/vmi-backend/composer.json
+++ b/vmi-backend/composer.json
@@ -7,8 +7,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "blade-ui-kit/blade-heroicons": "^2.1",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/telescope": "^5.11",
+        "laravel/tinker": "^2.10.1",
+        "moonshine/moonshine": "^3.16"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
